--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,12 +18,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+    - name: Run python python-flake8 checks
+      uses: julianwachholz/flake8-action@v2.0.2
+    - name: Run python black code formatter
+      uses: DataDog/action-py-black-formatter@v2
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
-    - name: Run python black code formatter
-      # You may pin to the exact commit or the version.
-      # uses: DataDog/action-py-black-formatter@bebd29d1572a82c8e4a9de3c42c1592529a7d6af
-      uses: DataDog/action-py-black-formatter@v2
+    - name: Check the code coverage
+      uses: AndreMiras/coveralls-python-action@v20201129
+
         
   
